Add JWT in Swagger
